# otagent

./: .gitignore  CMakeLists.txt
package/: otagent.service
src/: Agent.cpp  Agent.hpp  CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  OTTestEnvironment.cpp  OTTestEnvironment.hpp  main.cpp
